<?xml version="1.0"?>
<package format="2">
  <name>depalletizing_mapping</name>
  <version>1.0.0</version>
  <description>Meta-package for depalletizing_mapping library.</description>

  <maintainer email="lexqrt2@pusan.ac.kr">wj</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>depalletizing_mapping_msgs</exec_depend>
  <exec_depend>depalletizing_mapping_base</exec_depend>
  <exec_depend>depalletizing_mapping_core</exec_depend>
  <exec_depend>depalletizing_mapping_ros</exec_depend>
  <exec_depend>depalletizing_mapping_rviz_plugin</exec_depend>
  <exec_depend>depalletizing_mapping_demos</exec_depend>

  <export>
    <metapackage />
  </export>

</package>