<?xml version="1.0"?>
<package format="2">
  <name>depalletizing_mapping_base</name>
  <version>1.0.0</version>
  <description>The depalletizing_mapping_base package</description>

  <maintainer email="lexqrt2@pusan.ac.kr">wj</maintainer>
  <license>TODO</license>
  <url type="website">TODO</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>