<?xml version="1.0"?>
<package format="2">
    <name>using_msgs</name>
    <version>0.0.0</version>
    <description>The using_msgs package</description>

    <maintainer email="wj@todo.todo">wj</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>camel-euclid-vector</depend>
    <depend>heightmap_core</depend>
    <depend>heightmap_ros</depend>
    <depend>heightmap_msgs</depend>

</package>
